<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">3Hou.se</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_colorpicker">ColorpickerActivity</string>
    <string name="sitemap">Sitemap</string>
    <string name="servers">Servers</string>
    <string name="settings">Settings</string>
    <string name="controllers">Controllers</string>
    <string name="sitemaps">Sitemaps</string>
    <string name="add_widget">Add widget</string>
    <string name="voice_command_title">At your command</string>
    <string name="controller_name">Name</string>
    <string name="voice_command">Voice command</string>
    <string name="scan_for_server">Scan for server</string>
    <string name="openhab_server">Openhab Server</string>
    <string name="server_local">Local - http://host:port</string>
    <string name="server_remote">Remote - http://host:port</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="error">Error</string>
    <string name="server_name">Server Name</string>
    <string name="save">Save</string>
    <string name="color">Color</string>
    <string name="item_type">Item Type</string>
    <string name="command">Command</string>
    <string name="image">Image</string>
    <string name="settings_widgets">Widgets</string>
    <string name="settings_general">General</string>
    <string name="settings_widget">Widget</string>
    <string name="loading">Loading</string>
    <string name="title_activity_slider">Slider</string>
    <string name="max">Max</string>
    <string name="cancel">Cancel</string>
    <string name="pick_color">Pick color</string>
    <string name="items">Items</string>
    <string name="label_switch">Switch</string>
    <string name="item">Item</string>
    <string name="button">Button</string>
    <string name="slider">Slider</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="email_feedback">mattias@3hou.se</string>
    <string name="google_plus_community">G+ Community</string>
    <string name="ok">OK</string>
    <string name="send_text_command">Send text command</string>
    <string name="use_default_sitemap">Use default sitemap</string>
    <string name="default_sitemap">Default sitemap</string>
    <string name="open_sitemap">Open Sitemap</string>
    <string name="open_sitemap_name">Open sitemap - %s</string>
    <string name="inc_dec">Inc/Dec</string>
    <string name="value">Value</string>
    <string name="min">Min</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="show_name">Show Name</string>
    <string name="faild_to_load_sitemaps">Failed to load sitemaps</string>
    <string name="as_notification">As notification</string>
    <string name="more">More</string>
    <string name="media">Media</string>
    <string name="sensor">Sensor</string>
    <string name="title_activity_icon_picker">IconPickerActivity</string>
    <string name="all">All</string>
    <string name="server">Server</string>
    <string name="menu_item">Menu item</string>
    <string name="item_missing">Item is missing</string>
    <string name="show_title">Show title</string>
    <string name="home">Home</string>
    <string name="failed_save_controller">Failed to save controller</string>
    <string name="lost_server_connection">Lost connection to server</string>
    <string name="bindings">Bindings</string>
    <string name="remove_server_question">Remove server?</string>
    <string name="failed_to_load_server">Failed to load server</string>
    <string name="failed_list_bindings">Failed to list bindings</string>
    <string name="binding">Binding</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="channels">Channels</string>
    <string name="label">Label</string>
    <string name="arrows">Arrows</string>
    <string name="empty_controllers">No controller found. Press here to create your first controller.</string>
    <string name="empty_servers">No servers found. Press here to add your first server.</string>
    <string name="scan_for_servers">Searching for servers. The servers will show up here when found.</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="delete_cell">Delete cell?</string>
    <string name="name">Name</string>
    <string name="empty">Empty</string>
    <string name="no_sitemaps_found">No sitemaps found</string>
    <string name="start_scan_question">No server is configured. Do you want to search for one on your local network?</string>
    <string name="inbox">Inbox</string>
    <string name="inbox_property" translatable="false">%1$s:%2$s</string>
    <string name="ignore">Ignore</string>
    <string name="approve_item">Approve</string>
    <string name="approve_this_item">Add this item to your item list.</string>
    <string name="undo">UNDO</string>
    <string name="hide_item">Item is now hidden</string>
    <string name="restore_item">Item is restored!</string>
    <string name="show_ignored_items">Show ignored items</string>
    <string name="hide_ignored_items">Hide ignored items</string>
    <string name="show_ignored">Showing ignored items.</string>
    <string name="hide_ignored">Hide ignored items.</string>
    <string name="scan">Scan</string>
    <string name="new_server">New Server</string>
    <string name="open_source_libraries">Libraries</string>
    <string name="delete">Delete</string>
    <string name="help_translate">Help translate</string>
    <string name="open_last_sitemap_on_upstart">Open last sitemap on upstart</string>
    <string name="failed_to_get_inbox_items">Failed to get inbox items</string>
    <string name="edit">Edit</string>
    <string name="display_sitemap">Display sitemap</string>
    <string name="enable_icon_background">Enable icon background</string>
    <string name="theme">Theme</string>
    <string name="treehouse">3house</string>
    <string name="habdroid">habdroid</string>
    <string name="show_sitemaps_in_menu">Show sitemaps in menu</string>
    <string name="no_links_found">No links found</string>
    <string name="links">Links</string>
    <string name="remove_link">Remove link?</string>
    <string name="failed_delete_link">Failed to delete link.</string>
    <string name="dark">dark</string>
    <string name="invalid_url">Invalid Url</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="mtm_accept_cert">Accept Unknown Certificate?</string>
    <string name="mtm_trust_anchor">The server certificate is not signed by a known Certificate Authority.</string>
    <string name="mtm_cert_expired">The server certificate is expired.</string>
    <string name="mtm_accept_servername">Accept Mismatching Server Name?</string>
    <string name="mtm_hostname_mismatch">Server could not authenticate as \"%s\". The certificate is only valid for:</string>
    <string name="mtm_connect_anyway">Do you want to connect anyway?</string>
    <string name="mtm_cert_details">Certificate details:</string>
    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_abort">Abort</string>
    <string name="mtm_notification">Certificate Verification</string>
    <string name="unknown_certificate_accept_in_notification">Unknown certificate. Accept in notification.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myopenhab">my openHAB</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="error_username_password">Username or password is incorrect</string>
    <string name="message_from_my_openhab">Messages sent from myOpenHAB</string>
    <string name="channel_name_controllers">Controllers</string>
    <string name="channel_name_notification">Notifications</string>
    <string name="channel_name_certificates">Self signed certificate</string>
    <string name="user">User</string>
    <string name="demo">Demo</string>
    <string name="missing_widget"><![CDATA[Missing widget <font color=#FF0000>%s</font> <font color=#AA0000>%s</font>]]></string>
    <string name="next_page">Next page</string>
    <string name="widget_icon">Widget icon</string>
    <string name="nan">NaN</string>
</resources>
