<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/buttonHolderLayout"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/margin_controller_cell"
        android:layout_marginTop="@dimen/margin_controller_row"
        android:layout_marginBottom="@dimen/margin_controller_row">

    </LinearLayout>

    <ImageButton
        android:layout_width="@dimen/controller_button_space"
        android:layout_height="match_parent"
        android:id="@+id/btn_add_column"
        android:padding="10dp"
        android:background="@drawable/cell_button_conf"
        app:srcCompat="@drawable/add_row_icon" />
</LinearLayout>