<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/card_style">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_horizontal" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/img_menu"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_icon_server"
                android:layout_gravity="center_vertical" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>