...

            <TextView
                style="@style/TextInputLabel"
                android:id="@+id/server_name_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/serverNameText"
            android:text="@string/server_name" />

            <EditText
                android:id="@+id/serverNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:lines="1" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:text="@string/save" />
...
